5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1585_2895.log
== TEST (2019-03-21 11:29:54) 
-- CODE:
float(input("Quantidade de jogos"))

-- OUTPUT:
303.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:33:11) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
Preco = 150 * qta
vlf = float(input("Peco do frete"))
total = preco + vlf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = preco + vlf
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:33:37) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
Preco = 150 * qta
vlf = float(input("Peco do frete:"))
total = Preco + vlf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = preco + vlf
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:33:57) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
Preco = 150 * qta
vlf = float(input("Peco do frete:"))
total = Preco + vlf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = preco + vlf
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:34:25) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
Preco = 150 * qta
vlf = float(input("Peco do frete:"))
total = Preco + vlf
-- EXECUTION TIME:
0.307706
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:36) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
Preco = 150 * qta
vlf = float(input("Peco do frete:"))
total = Preco+vlf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = preco + vlf
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:08) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
Preco = 150 * qta
vlf = float(input("Peco do frete:"))
preco total = Preco + vlf
-- ERROR:
File "XXXX", line 4
    preco total = Preco + vlf
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:30) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
Preco = 150 * qta
vlf = float(input("Peco do frete:"))
preco_total = Preco + vlf
-- ERROR:
File "XXXX", line 4
    preco total = Preco + vlf
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:05) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
preco = 150 * qta
vlf = float(input("Peco do frete:"))
preco_total = preco + vlf
-- ERROR:
File "XXXX", line 4
    preco total = Preco + vlf
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:43) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Peco do frete:"))
preco_total = preco * qta + vlf
-- ERROR:
File "XXXX", line 4
    preco total = Preco + vlf
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:37:23) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
preco_total = preco * qta + vlf
-- ERROR:
File "XXXX", line 4
    preco total = Preco + vlf
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:37:47) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
preco_total = preco * qta + vlf
-- EXECUTION TIME:
0.144647
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:38:01) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print(preco_total = preco * qta + vlf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(preco_total = preco * qta + vlf)
TypeError: 'preco_total' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:38:22) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print( preco * qta + vlf)
-- OUTPUT:
1845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:38:50) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print preco (preco * qta + vlf)
-- ERROR:
File "XXXX", line 4
    print preco (preco * qta + vlf)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:38:57) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print (preco * qta + vlf)
-- EXECUTION TIME:
0.134575
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1845.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1567.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
37875.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:39:02) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print(preco * qta + vlf)
-- EXECUTION TIME:
0.154353
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1845.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1567.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
37875.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:04) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print(preco * qta + vlf)
-- OUTPUT:
1845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:39:12) 
-- CODE:
qta = float(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print(preco * qta + vlf)
-- EXECUTION TIME:
0.184129
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1845.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1567.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
37875.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:35) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print(preco * qta + vlf)
-- OUTPUT:
1845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:39:42) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print(preco * qta + vlf)
-- EXECUTION TIME:
0.216938
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1845.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1567.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
37875.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:40:29) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print(preco * qta + vlf)

-- OUTPUT:
1845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:41:20) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
preco total = print(preco * qta + vlf)

-- ERROR:
File "XXXX", line 4
    preco total = print(preco * qta + vlf)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:41:40) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print(preco * qta + vlf)

-- OUTPUT:
1845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:35) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
vlt = (preco * qta + vlf)
print(valor total :)

-- ERROR:
File "XXXX", line 5
    print(valor total :)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:58) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
vlt = (preco * qta + vlf)
print("VALOR TOTAL" vlt)

-- ERROR:
File "XXXX", line 5
    print("VALOR TOTAL" vlt)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:02) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
vlt = (preco * qta + vlf)
print("VALOR TOTAL")

-- OUTPUT:
VALOR TOTAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:24) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
vlt = preco * qta + vlf
print(vlt)

-- OUTPUT:
1845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:43) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
vlt = preco * qta + vlf
print("valor total"vlt)

-- ERROR:
File "XXXX", line 5
    print("valor total"vlt)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:53) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
vlt = preco * qta + vlf
print("valor total"(vlt))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("valor total"(vlt))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:43) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
vlt = preco * qta + vlf
Total = vlt
print(Total)

-- OUTPUT:
1845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:12) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
vlt = preco * qta + vlf
print(valor total:(vlt))

-- ERROR:
File "XXXX", line 5
    print(valor total:(vlt))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:26) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
vlt = preco * qta + vlf
print("valor total:"(vlt))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("valor total:"(vlt))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:47) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
vlt = preco * qta + vlf
print("valor total:")

-- OUTPUT:
valor total:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:47:58) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
vlt = preco * qta + vlf
print(vlt)

-- OUTPUT:
1845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:26) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
vlt = preco * qta + vlf
print(vlt)
print("valor total")
-- OUTPUT:
1845.0
valor total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:05) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print(qta*preco+vlf)
-- OUTPUT:
1845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:11) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print(qta*preco+vlf)
-- EXECUTION TIME:
0.187337
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1845.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1567.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
37875.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:16) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = 150 
vlf = float(input("Preco do frete:"))
print(qta*preco+vlf)
-- OUTPUT:
1845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:44) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco float(input("Preco do jogo"))
vlf = float(input("Preco do frete:"))
print(qta*preco+vlf)
-- ERROR:
File "XXXX", line 2
    preco float(input())
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:50) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = float(input("Preco do jogo"))
vlf = float(input("Preco do frete:"))
print(qta*preco+vlf)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:51:09) 
-- CODE:
qta = int(input("Quantidade de jogos:"))
preco = float(input("Preco do jogo:"))
vlf = float(input("Preco do frete:"))
print(qta*preco+vlf)
-- EXECUTION TIME:
0.153104
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
